[package]
name = "mrdot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mrdot"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
fs_extra = "1.3"
anyhow = "1"



